--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/020 Built-in Functions, Attributes and Methods with Pandas.ipy.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/020 Built-in Functions, Attributes and Methods with Pandas.ipy.ipynb
@@ -5,8 +5,8 @@
    "id": "1e67f48f-2a7f-4647-8670-df92a4bc1a38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T16:56:25.680183Z",
-     "start_time": "2024-12-13T16:56:23.994369Z"
+     "end_time": "2024-12-14T05:13:08.899334Z",
+     "start_time": "2024-12-14T05:13:06.624545Z"
     }
    },
    "source": [
@@ -203,12 +203,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -830,12 +830,89 @@
    "execution_count": 16
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T05:23:15.023022Z",
+     "start_time": "2024-12-14T05:23:15.018294Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "fruits = pd.DataFrame([[30, 21], [21, 43]], columns=[\"Apples\", \"Bananas\"], index=[\"test1\", \"test2\"])",
+   "id": "9ee9e53c52b8fba5",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T05:23:15.692008Z",
+     "start_time": "2024-12-14T05:23:15.686283Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "fruits",
+   "id": "683b155ef5806d2d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       Apples  Bananas\n",
+       "test1      30       21\n",
+       "test2      21       43"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Apples</th>\n",
+       "      <th>Bananas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>test1</th>\n",
+       "      <td>30</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test2</th>\n",
+       "      <td>21</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ca0442397914a5b7"
+   "id": "dd35fe3ac2279958"
   }
  ],
  "metadata": {
