--- a/Pandas/Kaggle/1.ipynb
+++ b/Pandas/Kaggle/1.ipynb
@@ -129,6 +129,33 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-12-14T09:46:13.474098Z",
+     "start_time": "2024-12-14T09:46:13.419371Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pd.Series([30, 35, 40], index=['2015 Sales', '2016 Sales', '2017 Sales'], name='Product A')",
+   "id": "d45ca6167720ce20",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015 Sales    30\n",
+       "2016 Sales    35\n",
+       "2017 Sales    40\n",
+       "Name: Product A, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-12-14T06:55:00.066211Z",
      "start_time": "2024-12-14T06:55:00.053393Z"
     }
