--- a/Pandas/Kaggle/1.ipynb
+++ b/Pandas/Kaggle/1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-14T05:48:33.191806Z",
-     "start_time": "2024-12-14T05:48:29.009232Z"
+     "end_time": "2024-12-14T11:51:28.045138Z",
+     "start_time": "2024-12-14T11:51:25.636350Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -293,12 +293,143 @@
    "execution_count": 16
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T11:54:27.654532Z",
+     "start_time": "2024-12-14T11:54:27.633600Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "783b3b5f4203ae50"
+   "source": [
+    "animals = pd.DataFrame({'Cows': [12, 20], 'Goats': [22, 19]}, index=['Year 1', 'Year 2'])\n",
+    "animals"
+   ],
+   "id": "783b3b5f4203ae50",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        Cows  Goats\n",
+       "Year 1    12     22\n",
+       "Year 2    20     19"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cows</th>\n",
+       "      <th>Goats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Year 1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year 2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T11:55:21.032350Z",
+     "start_time": "2024-12-14T11:55:21.018665Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.DataFrame(animals)\n",
+    "df.to_csv('cows_and_goats.csv')\n",
+    "cows_and_goats = pd.read_csv('cows_and_goats.csv')\n",
+    "cows_and_goats"
+   ],
+   "id": "1e6485f637ed1864",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Unnamed: 0  Cows  Goats\n",
+       "0     Year 1    12     22\n",
+       "1     Year 2    20     19"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Cows</th>\n",
+       "      <th>Goats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Year 1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Year 2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   }
  ],
  "metadata": {
