--- a/Pandas/Kaggle/1-Creating, Reading and Writing.ipynb
+++ b/Pandas/Kaggle/1-Creating, Reading and Writing.ipynb
@@ -6,19 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-14T11:51:28.045138Z",
-     "start_time": "2024-12-14T11:51:25.636350Z"
+     "end_time": "2024-12-14T16:02:48.550684Z",
+     "start_time": "2024-12-14T16:02:48.145557Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T08:38:00.449298Z",
-     "start_time": "2024-12-14T08:38:00.419424Z"
+     "end_time": "2024-12-14T16:02:48.582686Z",
+     "start_time": "2024-12-14T16:02:48.568682Z"
     }
    },
    "cell_type": "code",
@@ -74,18 +74,18 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T08:39:37.437953Z",
-     "start_time": "2024-12-14T08:39:37.433611Z"
+     "end_time": "2024-12-14T16:05:09.550770Z",
+     "start_time": "2024-12-14T16:05:09.536777Z"
     }
    },
    "cell_type": "code",
@@ -96,14 +96,57 @@
    "id": "997b6833400666e0",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the type of simple_df <class 'pandas.core.frame.DataFrame'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "             Bob           Sue\n",
+       "0    I liked it.  Pretty good.\n",
+       "1  It was awful.        Bland."
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bob</th>\n",
+       "      <th>Sue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I liked it.</td>\n",
+       "      <td>Pretty good.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>It was awful.</td>\n",
+       "      <td>Bland.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -129,8 +172,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T09:46:13.474098Z",
-     "start_time": "2024-12-14T09:46:13.419371Z"
+     "end_time": "2024-12-14T16:05:30.611135Z",
+     "start_time": "2024-12-14T16:05:30.596120Z"
     }
    },
    "cell_type": "code",
@@ -146,12 +189,12 @@
        "Name: Product A, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 8
   },
   {
    "metadata": {
@@ -295,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T11:54:27.654532Z",
-     "start_time": "2024-12-14T11:54:27.633600Z"
+     "end_time": "2024-12-14T16:06:58.378237Z",
+     "start_time": "2024-12-14T16:06:58.367453Z"
     }
    },
    "cell_type": "code",
@@ -352,18 +395,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T11:55:21.032350Z",
-     "start_time": "2024-12-14T11:55:21.018665Z"
+     "end_time": "2024-12-14T16:07:00.068313Z",
+     "start_time": "2024-12-14T16:07:00.041762Z"
     }
    },
    "cell_type": "code",
@@ -374,6 +417,78 @@
     "cows_and_goats"
    ],
    "id": "1e6485f637ed1864",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Unnamed: 0  Cows  Goats\n",
+       "0     Year 1    12     22\n",
+       "1     Year 2    20     19"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Cows</th>\n",
+       "      <th>Goats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Year 1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Year 2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T16:07:07.964918Z",
+     "start_time": "2024-12-14T16:07:07.949988Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "animals.to_csv('cows_and_goats.csv')\n",
+    "cows_and_goats = pd.read_csv('cows_and_goats.csv')\n",
+    "cows_and_goats"
+   ],
+   "id": "b3d6f668ecff1ec8",
    "outputs": [
     {
      "data": {
