--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/3-Built-in Functions, Attributes and Methods with Pandas.ipy.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/3-Built-in Functions, Attributes and Methods with Pandas.ipy.ipynb
@@ -5,8 +5,8 @@
    "id": "1e67f48f-2a7f-4647-8670-df92a4bc1a38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T05:13:08.899334Z",
-     "start_time": "2024-12-14T05:13:06.624545Z"
+     "end_time": "2024-12-14T18:17:25.826677Z",
+     "start_time": "2024-12-14T18:17:25.801183Z"
     }
    },
    "source": [
@@ -203,12 +203,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -794,7 +794,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "<h1 style = \"color:yellow;\" > Dataframe Methods </h1>\n",
+    "<h1 style = \"color:yellow;\" > Method Chaining </h1>\n",
     "\n"
    ],
    "id": "f9ab32fba46576e9"
@@ -832,33 +832,88 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-14T05:23:15.023022Z",
-     "start_time": "2024-12-14T05:23:15.018294Z"
+     "end_time": "2024-12-14T16:43:36.310098Z",
+     "start_time": "2024-12-14T16:43:36.299564Z"
     }
    },
    "cell_type": "code",
-   "source": "fruits = pd.DataFrame([[30, 21], [21, 43]], columns=[\"Apples\", \"Bananas\"], index=[\"test1\", \"test2\"])",
-   "id": "9ee9e53c52b8fba5",
-   "outputs": [],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-14T05:23:15.692008Z",
-     "start_time": "2024-12-14T05:23:15.686283Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "fruits",
-   "id": "683b155ef5806d2d",
+   "source": "titanic.mean(numeric_only=True).sort_values()",
+   "id": "21e28bf21a1761b2",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       Apples  Bananas\n",
-       "test1      30       21\n",
-       "test2      21       43"
+       "parch        0.381594\n",
+       "survived     0.383838\n",
+       "sibsp        0.523008\n",
+       "pclass       2.308642\n",
+       "age         29.699118\n",
+       "fare        32.204208\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T16:43:47.506656Z",
+     "start_time": "2024-12-14T16:43:47.493131Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "titanic.mean(numeric_only=True).sort_values().head(3)",
+   "id": "a83af01e899e39ce",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "parch       0.381594\n",
+       "survived    0.383838\n",
+       "sibsp       0.523008\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-14T18:27:29.999204Z",
+     "start_time": "2024-12-14T18:27:29.972488Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "titanic.sort_values(by='age', ascending=False)",
+   "id": "8801be924a352d32",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     survived  pclass     sex   age  sibsp  parch     fare embarked deck\n",
+       "630         1       1    male  80.0      0      0  30.0000        S    A\n",
+       "851         0       3    male  74.0      0      0   7.7750        S  NaN\n",
+       "493         0       1    male  71.0      0      0  49.5042        C  NaN\n",
+       "96          0       1    male  71.0      0      0  34.6542        C    A\n",
+       "116         0       3    male  70.5      0      0   7.7500        Q  NaN\n",
+       "..        ...     ...     ...   ...    ...    ...      ...      ...  ...\n",
+       "859         0       3    male   NaN      0      0   7.2292        C  NaN\n",
+       "863         0       3  female   NaN      8      2  69.5500        S  NaN\n",
+       "868         0       3    male   NaN      0      0   9.5000        S  NaN\n",
+       "878         0       3    male   NaN      0      0   7.8958        S  NaN\n",
+       "888         0       3  female   NaN      1      2  23.4500        S  NaN\n",
+       "\n",
+       "[891 rows x 9 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -879,23 +934,153 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Apples</th>\n",
-       "      <th>Bananas</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>deck</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>test1</th>\n",
-       "      <td>30</td>\n",
-       "      <td>21</td>\n",
+       "      <th>630</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>test2</th>\n",
-       "      <td>21</td>\n",
-       "      <td>43</td>\n",
+       "      <th>851</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7750</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.5042</td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34.6542</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>70.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>859</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2292</td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>863</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>69.5500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>868</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.5000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>878</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.8958</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>891 rows × 9 columns</p>\n",
        "</div>"
       ]
      },
@@ -912,7 +1097,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "dd35fe3ac2279958"
+   "id": "2f908f39ad86d90a"
   }
  ],
  "metadata": {
