--- a/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
+++ b/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
@@ -1755,6 +1755,188 @@
     }
    ],
    "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-15T08:33:31.177548Z",
+     "start_time": "2024-12-15T08:33:31.166575Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "reviews['Reviews Num Helpful'] = 5555\n",
+    "reviews"
+   ],
+   "id": "6cc4cb431539cf78",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                       Brand  \\\n",
+       "Sl.No.                         \n",
+       "1                      Gallo   \n",
+       "2            Fresh Craft Co.   \n",
+       "...                      ...   \n",
+       "2889    Vintage Wine Estates   \n",
+       "2890    Vintage Wine Estates   \n",
+       "\n",
+       "                                                     Name  \\\n",
+       "Sl.No.                                                      \n",
+       "1              Ecco Domani174 Pinot Grigio - 750ml Bottle   \n",
+       "2        Fresh Craft174 Mango Citrus - 4pk / 250ml Bottle   \n",
+       "...                                                   ...   \n",
+       "2889    Vintage Wine Estates Kevin O'Leary's Select Re...   \n",
+       "2890    Vintage Wine Estates Kevin O'Leary's Select Re...   \n",
+       "\n",
+       "          Reviews Date Added Reviews do Recommend  Reviews Num Helpful  \\\n",
+       "Sl.No.                                                                   \n",
+       "1       2018-01-09T13:24:04Z                 True                 5555   \n",
+       "2       2018-01-09T17:31:52Z                 True                 5555   \n",
+       "...                      ...                  ...                  ...   \n",
+       "2889    2017-11-15T17:05:21Z                  NaN                 5555   \n",
+       "2890    2017-09-25T16:31:30Z                  NaN                 5555   \n",
+       "\n",
+       "        Reviews Rating                                       Reviews Text  \\\n",
+       "Sl.No.                                                                      \n",
+       "1                  5.0      This a fantastic white wine for any occasion!   \n",
+       "2                  5.0   Tart, not sweet...very refreshing and delicious!   \n",
+       "...                ...                                                ...   \n",
+       "2889               5.0  This was my first purchase of these wines. Tri...   \n",
+       "2890               5.0  I don't know why the negative reviews said the...   \n",
+       "\n",
+       "                              Reviews Title    Weight  reviews num helpful  \n",
+       "Sl.No.                                                                      \n",
+       "1                    My Favorite White Wine   1.0 lbs                 5555  \n",
+       "2                                     Yum!!  2.45 lbs                 5555  \n",
+       "...                                     ...       ...                  ...  \n",
+       "2889                      Excellent Moscato       NaN                 5555  \n",
+       "2890    O'Leary's Select Reserve Chardonnay       NaN                 5555  \n",
+       "\n",
+       "[2890 rows x 10 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Reviews Date Added</th>\n",
+       "      <th>Reviews do Recommend</th>\n",
+       "      <th>Reviews Num Helpful</th>\n",
+       "      <th>Reviews Rating</th>\n",
+       "      <th>Reviews Text</th>\n",
+       "      <th>Reviews Title</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>reviews num helpful</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sl.No.</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gallo</td>\n",
+       "      <td>Ecco Domani174 Pinot Grigio - 750ml Bottle</td>\n",
+       "      <td>2018-01-09T13:24:04Z</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>This a fantastic white wine for any occasion!</td>\n",
+       "      <td>My Favorite White Wine</td>\n",
+       "      <td>1.0 lbs</td>\n",
+       "      <td>5555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fresh Craft Co.</td>\n",
+       "      <td>Fresh Craft174 Mango Citrus - 4pk / 250ml Bottle</td>\n",
+       "      <td>2018-01-09T17:31:52Z</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Tart, not sweet...very refreshing and delicious!</td>\n",
+       "      <td>Yum!!</td>\n",
+       "      <td>2.45 lbs</td>\n",
+       "      <td>5555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2889</th>\n",
+       "      <td>Vintage Wine Estates</td>\n",
+       "      <td>Vintage Wine Estates Kevin O'Leary's Select Re...</td>\n",
+       "      <td>2017-11-15T17:05:21Z</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>This was my first purchase of these wines. Tri...</td>\n",
+       "      <td>Excellent Moscato</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2890</th>\n",
+       "      <td>Vintage Wine Estates</td>\n",
+       "      <td>Vintage Wine Estates Kevin O'Leary's Select Re...</td>\n",
+       "      <td>2017-09-25T16:31:30Z</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5555</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I don't know why the negative reviews said the...</td>\n",
+       "      <td>O'Leary's Select Reserve Chardonnay</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5555</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2890 rows × 10 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 56
   }
  ],
  "metadata": {
