--- a/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
+++ b/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
@@ -1764,11 +1764,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "reviews['Reviews Num Helpful'] = 5555\n",
-    "reviews"
-   ],
-   "id": "6cc4cb431539cf78",
    "outputs": [
     {
      "data": {
@@ -1936,7 +1931,32 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 56
+   "execution_count": 56,
+   "source": [
+    "reviews['Reviews Num Helpful'] = 5555\n",
+    "reviews"
+   ],
+   "id": "6cc4cb431539cf78"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "nokte injast ke age az loc estefade mikoni , be label kar dare , harchi label bood che row che column estenad mikoni\n",
+    "yani masalan age row to hast \"test1\", \"test2\" vaghti mikhai behesh erja koni bayad ein hamin ro biari to query_text\n",
+    "----------------------------------\n",
+    "vali age az iloc estefade mikoni be andis (indice) kar dare, dg mohem nist lable chi hast , mohem andis oon hast, eyne ye list ke vaghti mikhaim be\n",
+    "onsor 3 eshare konim migim masalan listo[2]"
+   ],
+   "id": "979465f8c70cd0f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "92f6c2b613cc78ce"
   }
  ],
  "metadata": {
