--- a/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
+++ b/Pandas/Kaggle/2-Indexing, Selecting & Assigning.ipynb
@@ -9,7 +9,9 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
+    "g\n",
+    "pgimport\n",
+    "pandas as pd\n",
     "\n",
     "reviews = pd.read_csv(\"wine reviews.csv\", index_col=0)\n",
     "reviews"
