--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_01.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_01.ipynb
@@ -78,13 +78,13 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T18:07:25.935880Z",
-     "start_time": "2024-12-16T18:07:25.583707Z"
+     "end_time": "2024-12-17T02:23:44.088787Z",
+     "start_time": "2024-12-17T02:23:42.560764Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -98,13 +98,13 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T18:07:39.100337Z",
-     "start_time": "2024-12-16T18:07:39.088327Z"
+     "end_time": "2024-12-17T02:23:56.825798Z",
+     "start_time": "2024-12-17T02:23:56.801799Z"
     }
    },
    "source": "cars = pd.read_csv('cars.csv')",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -134,8 +134,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T18:07:52.352986Z",
-     "start_time": "2024-12-16T18:07:52.327976Z"
+     "end_time": "2024-12-17T02:23:59.505711Z",
+     "start_time": "2024-12-17T02:23:59.469098Z"
     }
    },
    "source": "cars",
@@ -340,12 +340,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -356,10 +356,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": "cars. - --(---)"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:25:29.792687Z",
+     "start_time": "2024-12-17T02:25:29.770709Z"
+    }
+   },
+   "source": [
+    "cars.head(10)\n",
+    "cars.loc[0]['name']"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chevrolet chevelle malibu'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -377,10 +396,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:27:34.187369Z",
+     "start_time": "2024-12-17T02:27:34.176370Z"
+    }
+   },
+   "source": [
+    "cars.tail(5)\n",
+    "len(cars)"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "398"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -398,17 +436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:32:16.805593Z",
+     "start_time": "2024-12-17T02:32:16.789598Z"
+    }
+   },
+   "source": "pd.options.display.max_rows = 400",
    "outputs": [],
-   "source": "pd.options.display. - -- = 400"
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:32:36.223404Z",
+     "start_time": "2024-12-17T02:32:36.209322Z"
+    }
+   },
+   "source": "pd.options.display.max_columns = 10",
    "outputs": [],
-   "source": []
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -419,10 +467,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:32:53.208132Z",
+     "start_time": "2024-12-17T02:32:53.187217Z"
+    }
+   },
+   "source": "cars.info()",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 398 entries, 0 to 397\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   mpg           398 non-null    float64\n",
+      " 1   cylinders     398 non-null    int64  \n",
+      " 2   displacement  398 non-null    float64\n",
+      " 3   horsepower    392 non-null    float64\n",
+      " 4   weight        398 non-null    int64  \n",
+      " 5   acceleration  398 non-null    float64\n",
+      " 6   model_year    398 non-null    int64  \n",
+      " 7   origin        398 non-null    object \n",
+      " 8   name          398 non-null    object \n",
+      "dtypes: float64(4), int64(3), object(2)\n",
+      "memory usage: 28.1+ KB\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -440,10 +516,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T02:33:15.148944Z",
+     "start_time": "2024-12-17T02:33:15.112537Z"
+    }
+   },
+   "source": "cars.describe()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              mpg   cylinders  displacement  horsepower       weight  \\\n",
+       "count  398.000000  398.000000    398.000000  392.000000   398.000000   \n",
+       "mean    23.514573    5.454774    193.425879  104.469388  2970.424623   \n",
+       "std      7.815984    1.701004    104.269838   38.491160   846.841774   \n",
+       "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
+       "25%     17.500000    4.000000    104.250000   75.000000  2223.750000   \n",
+       "50%     23.000000    4.000000    148.500000   93.500000  2803.500000   \n",
+       "75%     29.000000    8.000000    262.000000  126.000000  3608.000000   \n",
+       "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
+       "\n",
+       "       acceleration  model_year  \n",
+       "count    398.000000  398.000000  \n",
+       "mean      15.568090   76.010050  \n",
+       "std        2.757689    3.697627  \n",
+       "min        8.000000   70.000000  \n",
+       "25%       13.825000   73.000000  \n",
+       "50%       15.500000   76.000000  \n",
+       "75%       17.175000   79.000000  \n",
+       "max       24.800000   82.000000  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.514573</td>\n",
+       "      <td>5.454774</td>\n",
+       "      <td>193.425879</td>\n",
+       "      <td>104.469388</td>\n",
+       "      <td>2970.424623</td>\n",
+       "      <td>15.568090</td>\n",
+       "      <td>76.010050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.815984</td>\n",
+       "      <td>1.701004</td>\n",
+       "      <td>104.269838</td>\n",
+       "      <td>38.491160</td>\n",
+       "      <td>846.841774</td>\n",
+       "      <td>2.757689</td>\n",
+       "      <td>3.697627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>1613.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>104.250000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>2223.750000</td>\n",
+       "      <td>13.825000</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>148.500000</td>\n",
+       "      <td>93.500000</td>\n",
+       "      <td>2803.500000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>262.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>3608.000000</td>\n",
+       "      <td>17.175000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>46.600000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>455.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>5140.000000</td>\n",
+       "      <td>24.800000</td>\n",
+       "      <td>82.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
