--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
@@ -453,33 +453,24 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T05:12:40.780224Z",
-     "start_time": "2024-12-17T05:12:40.774101Z"
+     "end_time": "2024-12-17T08:57:23.131179Z",
+     "start_time": "2024-12-17T08:57:23.124589Z"
     }
    },
-   "source": "cars.iloc[200]",
+   "source": "cars.iloc[200, 8]",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "mpg                          18.0\n",
-       "cylinders                       6\n",
-       "displacement                250.0\n",
-       "horsepower                   78.0\n",
-       "weight                       3574\n",
-       "acceleration                 21.0\n",
-       "model_year                     76\n",
-       "origin                        usa\n",
-       "name            ford granada ghia\n",
-       "Name: 200, dtype: object"
+       "'ford granada ghia'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -657,32 +648,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T08:58:55.713784Z",
+     "start_time": "2024-12-17T08:58:55.635500Z"
+    }
+   },
+   "source": "cars = pd.read_csv('cars.csv', index_col=\"name\")",
    "outputs": [],
-   "source": [
-    "cars = pd.read_csv(---, --- = \"name\")"
-   ]
+   "execution_count": 28
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T08:58:58.821962Z",
+     "start_time": "2024-12-17T08:58:58.800549Z"
+    }
+   },
    "source": [
     "#run the cell and inspect!\n",
     "cars"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                            mpg  cylinders  displacement  horsepower  weight  \\\n",
+       "name                                                                           \n",
+       "chevrolet chevelle malibu  18.0          8         307.0       130.0    3504   \n",
+       "buick skylark 320          15.0          8         350.0       165.0    3693   \n",
+       "plymouth satellite         18.0          8         318.0       150.0    3436   \n",
+       "amc rebel sst              16.0          8         304.0       150.0    3433   \n",
+       "ford torino                17.0          8         302.0       140.0    3449   \n",
+       "...                         ...        ...           ...         ...     ...   \n",
+       "ford mustang gl            27.0          4         140.0        86.0    2790   \n",
+       "vw pickup                  44.0          4          97.0        52.0    2130   \n",
+       "dodge rampage              32.0          4         135.0        84.0    2295   \n",
+       "ford ranger                28.0          4         120.0        79.0    2625   \n",
+       "chevrolet s-10             31.0          4         119.0        82.0    2720   \n",
+       "\n",
+       "                           acceleration  model_year  origin  \n",
+       "name                                                         \n",
+       "chevrolet chevelle malibu          12.0          70     usa  \n",
+       "buick skylark 320                  11.5          70     usa  \n",
+       "plymouth satellite                 11.0          70     usa  \n",
+       "amc rebel sst                      12.0          70     usa  \n",
+       "ford torino                        10.5          70     usa  \n",
+       "...                                 ...         ...     ...  \n",
+       "ford mustang gl                    15.6          82     usa  \n",
+       "vw pickup                          24.6          82  europe  \n",
+       "dodge rampage                      11.6          82     usa  \n",
+       "ford ranger                        18.6          82     usa  \n",
+       "chevrolet s-10                     19.4          82     usa  \n",
+       "\n",
+       "[398 rows x 8 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>chevrolet chevelle malibu</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>buick skylark 320</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plymouth satellite</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>amc rebel sst</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford torino</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford mustang gl</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>2790</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vw pickup</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dodge rampage</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>2295</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford ranger</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chevrolet s-10</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>398 rows × 8 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 29
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T08:59:02.440504Z",
+     "start_time": "2024-12-17T08:59:02.414169Z"
+    }
+   },
    "source": [
     "#run the cell and inspect!\n",
     "cars.info()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 398 entries, chevrolet chevelle malibu to chevrolet s-10\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   mpg           398 non-null    float64\n",
+      " 1   cylinders     398 non-null    int64  \n",
+      " 2   displacement  398 non-null    float64\n",
+      " 3   horsepower    392 non-null    float64\n",
+      " 4   weight        398 non-null    int64  \n",
+      " 5   acceleration  398 non-null    float64\n",
+      " 6   model_year    398 non-null    int64  \n",
+      " 7   origin        398 non-null    object \n",
+      "dtypes: float64(4), int64(3), object(1)\n",
+      "memory usage: 28.0+ KB\n"
+     ]
+    }
+   ],
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -693,12 +925,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T08:59:58.872114Z",
+     "start_time": "2024-12-17T08:59:58.862750Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.index",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['chevrolet chevelle malibu', 'buick skylark 320', 'plymouth satellite',\n",
+       "       'amc rebel sst', 'ford torino', 'ford galaxie 500', 'chevrolet impala',\n",
+       "       'plymouth fury iii', 'pontiac catalina', 'amc ambassador dpl',\n",
+       "       ...\n",
+       "       'chrysler lebaron medallion', 'ford granada l', 'toyota celica gt',\n",
+       "       'dodge charger 2.2', 'chevrolet camaro', 'ford mustang gl', 'vw pickup',\n",
+       "       'dodge rampage', 'ford ranger', 'chevrolet s-10'],\n",
+       "      dtype='object', name='name', length=398)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -709,12 +963,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T09:00:41.630403Z",
+     "start_time": "2024-12-17T09:00:41.616945Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.loc[\"ford ranger\", \"weight\"]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2625)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -733,10 +1002,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-17T09:01:19.896705Z",
+     "start_time": "2024-12-17T09:01:19.887251Z"
+    }
+   },
+   "source": "cars.loc[\"ford torino\", [\"model_year\", \"origin\"]]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "model_year     70\n",
+       "origin        usa\n",
+       "Name: ford torino, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -754,12 +1041,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-17T09:01:44.925919Z",
+     "start_time": "2024-12-17T09:01:44.911733Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": "cars.loc[:, ['mpg', 'weight']]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                            mpg  weight\n",
+       "name                                   \n",
+       "chevrolet chevelle malibu  18.0    3504\n",
+       "buick skylark 320          15.0    3693\n",
+       "plymouth satellite         18.0    3436\n",
+       "amc rebel sst              16.0    3433\n",
+       "ford torino                17.0    3449\n",
+       "...                         ...     ...\n",
+       "ford mustang gl            27.0    2790\n",
+       "vw pickup                  44.0    2130\n",
+       "dodge rampage              32.0    2295\n",
+       "ford ranger                28.0    2625\n",
+       "chevrolet s-10             31.0    2720\n",
+       "\n",
+       "[398 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>chevrolet chevelle malibu</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>buick skylark 320</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plymouth satellite</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>amc rebel sst</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>3433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford torino</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford mustang gl</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>2790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vw pickup</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>2130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dodge rampage</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford ranger</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chevrolet s-10</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2720</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>398 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
