--- a/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
+++ b/Pandas/04 - Pandas Basics (DataFrame Basics I)/Coding_Exercises/Exercise_02.ipynb
@@ -1048,7 +1048,10 @@
      "start_time": "2024-12-17T09:01:44.911733Z"
     }
    },
-   "source": "cars.loc[:, ['mpg', 'weight']]",
+   "source": [
+    "p\n",
+    "cars.loc[:, ['mpg', 'weight']]"
+   ],
    "outputs": [
     {
      "data": {
